# rusty-boy

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: lint.yml
cmake/: FindSDL2_Mixer.cmake
controllers/: sneslayout.txt
docs/: index.md
lib/rusty-boy-derive/: Cargo.toml
lib/rusty-boy-derive/src/: lib.rs
scripts/: build_wasm.sh
src/: cpu.rs  disasm.rs  lib.rs  main.rs  prelude.rs  todo.org
src/C/: graphics.c  graphics.h  linked_list.c  linked_list.h
src/assembler/: CSL.rs  asm.lalrpop  asm_ext.rs  mod.rs  tests.rs
src/cpu/: apu.rs  cartridge.rs  constants.rs  fifo.rs  macros.rs  memory.rs  mod.rs  tests.rs
src/cpu/cartridge/: mod.rs
src/cpu/memvis/: cpumemvis.rs  mod.rs
src/debugger/: dbglanguage.lalrpop  dbglanguage.rs  graphics.rs  language.rs  mod.rs  tests.rs
src/gba/: mod.rs
src/io/: applicationsettings.rs  applicationstate.rs  arguments.rs  constants.rs  deferred_renderer.rs  deferred_renderer_gba.rs  dr_sdl2.rs  events.rs  graphics.rs  input.rs  memvis.rs  mod.rs  sound.rs  vidram.rs
src/io/graphics/: .#vulkan.rs  mod.rs  renderer.rs
src/io/graphics/gl/: mod.rs  util.rs
src/io/graphics/gl/shaders/: gameboy.frag  gameboy.vert
src/io/graphics/gl/util/: buffer.rs  data.rs  mod.rs  shader.rs  texture.rs
src/io/graphics/sdl2/: input.rs  memvis.rs  mod.rs  utility.rs  vidram.rs
src/io/graphics/vulkan/: mod.rs
static/: gameboy.js  index.html  styles.css
