[package]
name = "gameboy"
version = "0.1.1"
edition = "2018"
authors = ["MarkMcCaskey <rabidwaffle@gmail.com>"]
description = "A Gameboy emulator and related tools"

[badges]
travis-ci = { repository = "MarkMcCaskey/rusty-boy", branch = "master" }
maintainence = {status = "experimental"}

[features]
default = []
asm = ["nom"]
debugger = ["ncurses", "nom"]
vulkan = []
development = ["debugger"]

[dependencies]
clap = "^2.31"
sdl2 = "^0.31"
log = "^0.4.1"
log4rs = "^0.8.0"
rand = "^0.4.2"
serde = "^1.0.0"
serde_derive = "^1.0.0"
app_dirs = "^1.1.1"
time = "^0.1"
lazy_static = "^1.0"

vulkano = {version = "0.6.2", optional = true}
vulkano-shader-derive = {version = "0.6.2", optional = true}
winit = {version = "0.7.6", optional = true}
vulkano-win = {version = "0.6.2", optional = true}

nom = {version = "^2.2", optional = true}
ncurses = {version = "^5.85.0", optional = true}

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
# codegen-units = 2
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units = 1
panic = 'unwind'