[package]
name = "gameboy"
version = "0.1.1"
edition = "2021"
authors = ["MarkMcCaskey <rabidwaffle@gmail.com>"]
description = "A Gameboy emulator and related tools"
default-run = "gameboy"

[lib]
name = "rusty_boy_lib"
crate-type = ["cdylib"]
path = "src/lib.rs"

[badges]
travis-ci = { repository = "MarkMcCaskey/rusty-boy", branch = "master" }
maintainence = {status = "experimental"}

[features]
default = ["cli"]
asm = ["nom"]
debugger = ["ncurses", "nom"]
vulkan = []
development = ["debugger"]
cli = ["clap", "env_logger", "desktop"]
desktop = ["app_dirs", "sdl2"]

[dependencies]
app_dirs = { version = "^1.1.1", optional = true }
clap = { version = "^2.31", optional = true}
env_logger = { version = "0.10", optional = true, default-features = false, features = ["auto-color"] }
gameboy-rom = { version = "0.4" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
rand = { version = "^0.8.5", optional = true }
sdl2 = { version = "^0.35.2", optional = true }

#vulkano = {version = "0.6.2", optional = true}
#vulkano-shader-derive = {version = "0.6.2", optional = true}
#winit = {version = "0.7.6", optional = true}
#vulkano-win = {version = "0.6.2", optional = true}

nom = { version = "^2.2", optional = true }
ncurses = {version = "^5.85.0", optional = true}

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
# codegen-units = 2
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
